--- a/assets/scss/_page.scss
+++ b/assets/scss/_page.scss
@@ -7,6 +7,8 @@
     }
 
     &__wrapper {
+        white-space: nowrap;
+
         &:not(:last-child) {
             margin-right: $gap;
         }
